Updated image paths

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -11,7 +11,7 @@ tags : [intro, spatial data, raster, vector]
 
 ## Raster
 
-<a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg"><img width="256" alt="Rgb-raster-image" src="{{site.baseurl}}{{ASSET_PATH}}/images/Raster-image.svg"/></a>
+<a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg"><img width="256" alt="Rgb-raster-image" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Raster-image.svg"/></a>
 
 Raster image
   : a dot matrix data structure representing a generally rectangular grid of pixels, or points of color, viewable via a monitor, paper of other display medium.[^1]
