--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -18,12 +18,12 @@ category: Know the Basics
 
 
 
-<a title="By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AVectorBitmapExample.svg"><img width="512" alt="VectorBitmapExample" src="{{site.baseurl}}{{ASSET_PATH}}/images/VectorBitmapExample.svg"/></a>
+<a title="By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AVectorBitmapExample.svg"><img width="512" alt="VectorBitmapExample" src="{{BASE_PATH}}{{ASSET_PATH}}/images/VectorBitmapExample.svg"/></a>
 
 
 Vector data uses features \(features are usually points, lines or polygons\) to represent discrete phenomena in the real world. For example, a vector data file might include a river represented by a line which is assigned a value. For data which is associated with discrete entities like countries, landmarks, roads, etc. vector data is the way to go.
 <br>
-<img width="512px" src="{{site.baseurl}}{{ASSET_PATH}}/images/Simple_vector_map.svg"/> <br>
+<img width="512px" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Simple_vector_map.svg"/> <br>
 
 <a title="By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARaster_vector_tikz.png"><img width="450" alt="Raster vector tikz" src="//upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Raster_vector_tikz.png/512px-Raster_vector_tikz.png"/></a>
 
