updates to post, _config

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -2,8 +2,8 @@
 title: "Raster Data"
 layout: post
 category : Know the Basics
-tagline: "Supporting tagline"
-tags : [intro, spatial data, raster, vector]
+tagline: 
+tags : [intro, raster]
 ---
 
 {% include JB/setup %}
