updates to post.html-- left nav, css

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -8,28 +8,36 @@ tags : [intro, raster]
 
 {% include JB/setup %}
 
+#### Pre-requisites:
+
+- Setup, Basics Overview, Vector
+
+#### Objectives:
+
+- Understand raster data formats, scale, resolution
+- Recognize a few spatial raster formats
+
+----
 
 ## Raster
 
 <a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg"><img width="256" alt="Rgb-raster-image" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Raster-image.svg"/></a>
 
 Raster image
-  : a dot matrix data structure representing a generally rectangular grid of pixels, or points of color, viewable via a monitor, paper of other display medium.[^1]
+  : A dot matrix data structure representing a generally rectangular grid of pixels, or points of color, viewable via a monitor, paper of other display medium.[^1]
 
 
-Raster data is used to represent continuous phenemena in our world. Continuous phenomena have an assigned value at all positions on a surface. Raster data is commonly seen in satellite images. Satellite images are, simply put, pictures of the earth from space. Just like the pictures you can take with a hand-held digital camera, the information is in the pixels. Each pixel has a number value that can be translated into a color. Raster data si commonly output by sensors.<br><br>
+Raster data is used to represent continuous phenemena in our world. Continuous phenomena have an assigned value at all positions on a surface. Raster data is commonly seen in satellite images. Satellite images are, simply put, pictures of the earth from space. Just like the pictures you can take with a hand-held digital camera, the information is in the pixels. Each pixel has a number value that can be translated into a color. Raster data is commonly output by sensors.<br><br>
 
 <a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif"><img width="512" alt="The use of a raster data structure to summarize a point pattern" src="//upload.wikimedia.org/wikipedia/commons/thumb/b/b7/The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif/512px-The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif"/></a>
 
 <br>
-
 
 ----
 
 ##Common Data Formats
 
  Here are some common data formats you may encounter:
-
 
  * GeoTIFF: A standard that allows embedding geographic information in a TIFF file.
  * NetCDF: A multidimensional data format that allows for multiple variables covering 1 or more dimensions.
@@ -38,15 +46,14 @@ Raster data is used to represent continuous phenemena in our world. Continuous p
 
 ----
 
-
 ### Scale
 
 Scale
-  : Proportional difference between representation and actual object
+  : Proportional difference between representation and actual object.
 
 Scale bars are commonly used on maps to visualize the map distance in real world units.
 
-Scales can also be expressed in words(lexical form) or in a ratio (representative fraction).
+Scales can also be expressed in words (lexical form) or in a ratio (representative fraction).
 
 #### Lexical Form
 
