--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -6,9 +6,11 @@ category: Know the Basics
 
 {% include JB/setup %}
 
-#### **Pre-requisites: Installing QGIS, Is Spatial Special?**
+#### Pre-requisites:
 
-#### **Objectives:**
+- Setup, Basics Overview
+
+#### Objectives:
   - Understand the difference between a raster and a vector dataset. 
   - Recognize a few spatial data formats.
 
@@ -16,16 +18,14 @@ category: Know the Basics
 
 ##Vector<a name="vector"></a>
 
-
-
 <a title="By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AVectorBitmapExample.svg"><img width="512" alt="VectorBitmapExample" src="{{BASE_PATH}}{{ASSET_PATH}}/images/VectorBitmapExample.svg"/></a>
-
 
 Vector data uses features \(features are usually points, lines or polygons\) to represent discrete phenomena in the real world. For example, a vector data file might include a river represented by a line which is assigned a value. For data which is associated with discrete entities like countries, landmarks, roads, etc. vector data is the way to go.
 <br>
+<br>
 <img width="512px" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Simple_vector_map.svg"/> <br>
 
-<a title="By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARaster_vector_tikz.png"><img width="450" alt="Raster vector tikz" src="//upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Raster_vector_tikz.png/512px-Raster_vector_tikz.png"/></a>
+<a title="By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons" target="_blank" href="http://commons.wikimedia.org/wiki/File%3ARaster_vector_tikz.png"><img width="450" alt="Raster vector tikz" src="{{BASE_PATH}}{{ASSET_PATH}}/images/1024px-Raster_vector_tikz.png"/></a>
 
 <br>
 
@@ -52,7 +52,7 @@ Polygon
 
 
  * Shapefile: Stores point, line, and polygon data. This file type is actually made up of a collection of files with the following endings: These are mandatory: .shp, .shx, .dbf There are many others which are optional, including the important .prj file that describes the projection information for that data.
- * Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract.
+ * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.
  * GeoJSON: Encodes points, lines, and polygons (and collections of those) along with information about them using JSON (JavaScript Object Notation). This format is popular for web maps.
 
 
