Updated post laying

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -3,14 +3,16 @@ title: "Raster Data"
 layout: post
 category : Know the Basics
 tagline: 
-tags : [intro, raster]
+tags : [intro, raster, data types]
 ---
 
 {% include JB/setup %}
 
 #### Pre-requisites:
 
-- Setup, Basics Overview, Vector
+- Setup
+- Basics Overview
+- Vector
 
 #### Objectives:
 
@@ -35,7 +37,7 @@ Raster data is used to represent continuous phenemena in our world. Continuous p
 
 ----
 
-##Common Data Formats
+## Common Data Formats
 
  Here are some common data formats you may encounter:
 
@@ -46,7 +48,7 @@ Raster data is used to represent continuous phenemena in our world. Continuous p
 
 ----
 
-### Scale
+## Scale
 
 Scale
   : Proportional difference between representation and actual object.
@@ -55,12 +57,12 @@ Scale bars are commonly used on maps to visualize the map distance in real world
 
 Scales can also be expressed in words (lexical form) or in a ratio (representative fraction).
 
-#### Lexical Form
+### Lexical Form
 
   - "five meters per centimeter"
   - "120 miles per inch"
 
-#### Representative Fraction
+### Representative Fraction
 
   - 1:500,000
   - 1:25,000
@@ -68,9 +70,9 @@ Scales can also be expressed in words (lexical form) or in a ratio (representati
 
 ---
 
-### Resolution
+## Resolution
 
-####Types:
+###Types:
   
 Spatial Resolution
   : Number of pixels per unit (pixels per inch)
