--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -2,17 +2,20 @@
 title: Vector Data
 layout: post
 category: Know the Basics
+tags: [vector, data types]
 ---
 
 {% include JB/setup %}
 
 #### Pre-requisites:
 
-- Setup, Basics Overview
+- Setup
+- Basics Overview
 
 #### Objectives:
-  - Understand the difference between a raster and a vector dataset. 
-  - Recognize a few spatial data formats.
+
+ - Understand the difference between a raster and a vector dataset. 
+ - Recognize a few spatial data formats.
 
 ----
 
@@ -49,7 +52,6 @@ Polygon
 ----
 
 ### Data formats
-
 
  * Shapefile: Stores point, line, and polygon data. This file type is actually made up of a collection of files with the following endings: These are mandatory: .shp, .shx, .dbf There are many others which are optional, including the important .prj file that describes the projection information for that data.
  * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.
