--- a/_posts/2000-12-31-overview.md
+++ b/_posts/2000-12-31-overview.md
@@ -9,7 +9,7 @@ tagline:
 
 #### Goals/Objectives
 
-After completing this workshop, you will:
+After completing this section, you will:
 
   1. Know what separates spatial data from other data types
   2. Understand the main families of spatial data - Raster data and vector data.
@@ -20,12 +20,9 @@ After completing this workshop, you will:
   - A working QGIS installation with the iRods Plugin installed.
   - A registered iPlant account with access to the iPlant Data Store
 
-
-
 ----
 
-#Is Spatial Special?
-
+## Is Spatial Special?
 
 There have been numerous discussions about the nature of spatial data and whether or not there is anything special about spatial information. Since the Open Geospatial Consortium(OGC) created the Simple Features for SQL specification in 1999, spatial data can be stored alongside other data types as just another column in a table. However, if you look for it, you can see a lot of GIS professionals evangelizing the difference between spatial data and *regular data*. Is there really a valid reason that spatial data is more unique than temporal or text data types? Is it just GIS professionals trying to sell their expertise as a separate field?
 
@@ -43,9 +40,7 @@ The simple features for SQL defined a simple feature as a feature with all geome
 
 ----
 
-
-
-#Rasters and Vectors
+## Rasters and Vectors
 There are two main families of spatial data which are each used for a specific function. Vector data, which represents discrete phenomena such as bus stations, and Raster data which represents continuous phenomena like temperature.
 
 ----
