--- a/_posts/2000-12-31-overview.md
+++ b/_posts/2000-12-31-overview.md
@@ -1,26 +1,11 @@
 --- 
-title: "Overview"
+title: "Introduction"
 category: Know the Basics
 layout: post
 tagline: 
 ---
 
 {% include JB/setup %}
-
-#### Goals/Objectives
-
-After completing this section, you will:
-
-  1. Know what separates spatial data from other data types
-  2. Understand the main families of spatial data - Raster data and vector data.
-  3. Know the basics of projections and coordinate systems
-
-#### You will need:
-
-  - A working QGIS installation with the iRods Plugin installed.
-  - A registered iPlant account with access to the iPlant Data Store
-
-----
 
 ## Is Spatial Special?
 
