Added featherlight, updates images with featherlight

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -23,15 +23,14 @@ tags : [intro, raster, data types]
 
 ## Raster
 
-<a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg"><img width="256" alt="Rgb-raster-image" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Raster-image.svg"/></a>
+<img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/Raster-image.svg" width="256" alt="Rgb-raster-image" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Raster-image.svg"/> ref: [^1]
 
 Raster image
   : A dot matrix data structure representing a generally rectangular grid of pixels, or points of color, viewable via a monitor, paper of other display medium.[^1]
 
-
 Raster data is used to represent continuous phenemena in our world. Continuous phenomena have an assigned value at all positions on a surface. Raster data is commonly seen in satellite images. Satellite images are, simply put, pictures of the earth from space. Just like the pictures you can take with a hand-held digital camera, the information is in the pixels. Each pixel has a number value that can be translated into a color. Raster data is commonly output by sensors.<br><br>
 
-<a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif"><img width="512" alt="The use of a raster data structure to summarize a point pattern" src="//upload.wikimedia.org/wikipedia/commons/thumb/b/b7/The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif/512px-The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif"/></a>
+<img data-featherlight="//upload.wikimedia.org/wikipedia/commons/thumb/b/b7/The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif/512px-The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif" width="512" alt="The use of a raster data structure to summarize a point pattern" src="//upload.wikimedia.org/wikipedia/commons/thumb/b/b7/The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif/512px-The_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif"/> ref: [^2]
 
 <br>
 
@@ -59,14 +58,13 @@ Scales can also be expressed in words (lexical form) or in a ratio (representati
 
 ### Lexical Form
 
-  - "five meters per centimeter"
-  - "120 miles per inch"
+- "five meters per centimeter"
+- "120 miles per inch"
 
 ### Representative Fraction
 
-  - 1:500,000
-  - 1:25,000
-
+- 1:500,000
+- 1:25,000
 
 ---
 
@@ -87,5 +85,7 @@ Radiometric Resolution
   : Number of differences in brightness that can be detected (number of shades)
 
 ----
+[^1]: <a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg">By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg</a>
+[^2]: <a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif">By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons</a>
+[^3]: [Raster Graphics - Scratch Wiki](//:wiki.scratch.mit.edu/wiki/Raster_Graphics). wiki.scratch.mit.edu. Retrieved April 14 2015.
 
-[^1]: [Raster Graphics - Scratch Wiki](//:wiki.scratch.mit.edu/wiki/Raster_Graphics). wiki.scratch.mit.edu. Retrieved April 14 2015.
