--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -21,20 +21,22 @@ tags: [vector, data types]
 
 ##Vector<a name="vector"></a>
 
-<a title="By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AVectorBitmapExample.svg"><img width="512" alt="VectorBitmapExample" src="{{BASE_PATH}}{{ASSET_PATH}}/images/VectorBitmapExample.svg"/></a>
+
+<img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/VectorBitmapExample.svg" width="512" alt="VectorBitmapExample" src="{{BASE_PATH}}{{ASSET_PATH}}/images/VectorBitmapExample.svg"/> ref: [^1]
 
 Vector data uses features \(features are usually points, lines or polygons\) to represent discrete phenomena in the real world. For example, a vector data file might include a river represented by a line which is assigned a value. For data which is associated with discrete entities like countries, landmarks, roads, etc. vector data is the way to go.
 <br>
 <br>
-<img width="512px" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Simple_vector_map.svg"/> <br>
+<img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/Simple_vector_map.svg" width="512px" src="{{BASE_PATH}}{{ASSET_PATH}}/images/Simple_vector_map.svg"/> <br>
 
-<a title="By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons" target="_blank" href="http://commons.wikimedia.org/wiki/File%3ARaster_vector_tikz.png"><img width="450" alt="Raster vector tikz" src="{{BASE_PATH}}{{ASSET_PATH}}/images/1024px-Raster_vector_tikz.png"/></a>
+
+<img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/1024px-Raster_vector_tikz.png" width="450" alt="Raster vector tikz" src="{{BASE_PATH}}{{ASSET_PATH}}/images/1024px-Raster_vector_tikz.png"/> ref: [^2]
 
 <br>
 
 ### Vector Data Types
 
-The Geometry Object Model from the Simple Features for SQL specification[^1]:
+The Geometry Object Model from the Simple Features for SQL specification:
 
 This structure allowed developers to rely on a standard system for storing spatial data types and representing the relationships between different spatial data types.
 
@@ -57,4 +59,8 @@ Polygon
  * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.
  * GeoJSON: Encodes points, lines, and polygons (and collections of those) along with information about them using JSON (JavaScript Object Notation). This format is popular for web maps.
 
+----
+
+[^1]: <a title="By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AVectorBitmapExample.svg">By Darth Stabro at en.wikipedia [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], from Wikimedia Commons</a>
+[^2]: <a title="By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons" target="_blank" href="http://commons.wikimedia.org/wiki/File%3ARaster_vector_tikz.png">By Wegmann (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons</a>
 
