Updates to workflows

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -18,6 +18,13 @@ tags : [intro, raster, data types]
 
 - Understand raster data formats, scale, resolution
 - Recognize a few spatial raster formats
+- Insepect and understand raster data in QGIS
+
+#### Data: 
+
+iPlant Data Store: <br>&nbsp;&nbsp;&nbsp;``/Community Data/aegis/Spatial-bootcamp/basics/raster``
+
+- [Landsat7 ETM 2015-05-10](link-here)
 
 ----
 
@@ -85,6 +92,25 @@ Radiometric Resolution
   : Number of differences in brightness that can be detected (number of shades)
 
 ----
+
+## Exercise
+
+<ol>
+<li>Import raster data <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>
+<ol>
+<li>Be sure you have already downloaded the <a href="#">raster data set</a>.</li>
+<li>Open QGIS if you do not already have it open and import the Landsat7 imagery with <strong>Add Raster Layer</strong>. Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-14.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-14.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
+</li>
+</ol>
+</li>
+<li>Raster properties</li>
+<li>Metadata</li>
+<li>Raster stats</li>
+<li>Resolution - zoom in close enough to see pixels</li>
+</ol>
+
+----
+
 [^1]: <a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg">By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg</a>
 [^2]: <a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif">By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons</a>
 [^3]: [Raster Graphics - Scratch Wiki](//:wiki.scratch.mit.edu/wiki/Raster_Graphics). wiki.scratch.mit.edu. Retrieved April 14 2015.
