--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -16,6 +16,13 @@ tags: [vector, data types]
 
  - Understand the difference between a raster and a vector dataset. 
  - Recognize a few spatial data formats.
+ - Import and understand vector data in QGIS
+
+#### Data: 
+
+iPlant Data Store: <br>&nbsp;&nbsp;&nbsp;``/Community Data/aegis/Spatial-bootcamp/basics/vector``
+
+- [Arizona Counties boundaries (shapefile)](http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip)
 
 ----
 
@@ -58,6 +65,41 @@ Polygon
  * Shapefile: Stores point, line, and polygon data. This file type is actually made up of a collection of files with the following endings: These are mandatory: .shp, .shx, .dbf There are many others which are optional, including the important .prj file that describes the projection information for that data.
  * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.
  * GeoJSON: Encodes points, lines, and polygons (and collections of those) along with information about them using JSON (JavaScript Object Notation). This format is popular for web maps.
+
+----
+
+## Exercise
+
+This next exercise will explain the basics of importing, inspecting, and styling vector data using QGIS.
+
+<ol>
+<li>Import vector data<img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/>
+<ol>
+ <li>If you have not already, go to the top of this page to the <a href="#data"><strong>Data</strong></a> section and download both vector and raster data sets.</li>
+ <li>Open QGIS and import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> button in the Toolbar or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
+ <li>Click <strong>Browse</strong> to locate the shapefile: arizona_counties.shp<br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
+ <li>We now visualizing counties in Arizona. <strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
+  </ol>
+</li>
+<li>View vector properties
+<ol>
+<li>To view vector (and all layers) attributes, <em>Right-click layer > Open Attribute Table</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" alt="Spatial Data Bootcamp: QGIS - view vector data attributes"/><br><br>This data was extracted from Global Administrative Areas, which will be covered in <strong>Data Collection</strong>. This is simple boundary data; just gives us country, state, county name, and unique identifiers for each entry. Example uses of this type of data are: joining Census tabular data; visualizing boundaries; cutting satellite imagery to a desired area.</li>
+</ol>
+</li>
+<li>Styling</li>
+<ol>
+<li>You're able to customize how our data is visualized. Styles (like a template) can also be exported and saved for later use.<br><br>To style our <em>arizona_counties </em> layer: <em>Right-click layer (layer list) > Properties > Style</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-5.png}}" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-5.png" alt="Spatial Data Bootcamp: QGIS - style vector layer"/><br><br>
+</li>
+<li>
+You can change the symbolism of the data by clicking on the dropdown list (default option is Single Symbol) <img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-6.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-6.png" alt="Spatial Data Bootcamp: QGIS - vector symbolism"/> From the dropdown list, select <em>Categorized</em><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-7.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-7.png" alt="Spatial Data Bootcamp: QGIS - categorized symbolism"/><br><br>
+</li>
+<li>
+Once in the <em>Categorized</em> menu, configure as follows:<br><ul><li>Column: NAME_2</li><li>Color ramp: Random colors</li><li>Click <strong>Classify</strong> to add the data classifications from the column <strong>NAME_2</strong>.</li></ul><br>If you remember from looking at our Arizona counties attributes, you'll know that <strong>NAME_2</strong> represents the county name of each county.<br><br>Click <strong>Apply</strong> then <strong>OK</strong> to update changes.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" alt="Spatial Data Bootcamp: QGIS - Arizona county categorized by county name"/><br><br>
+</li>
+<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. Move on to the next lesson.
+</li>
+</ol>
+</ol>
 
 ----
 
