Updated irods access path

--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -20,7 +20,7 @@ tags: [vector, data types]
 
 #### Data: 
 
-iRods access: <br>&nbsp;&nbsp;&nbsp;``/Community Data/aegis/Spatial-bootcamp/basics/vector``
+iRods access: <br>&nbsp;&nbsp;&nbsp;``/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector``
 
 - [Arizona Counties boundaries (shapefile)](http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip)
 
