--- a/_posts/2000-12-31-overview.md
+++ b/_posts/2000-12-31-overview.md
@@ -111,7 +111,17 @@ However, this is not the same as changing the project projection. You may define
 
 <h3>4. Geoalgorithms</h3>
 <p>Some basic spatial functions are clip, buffer, and intersect. These are covered in <a href="http://spatialcarpentry.github.io/spatial-analysis/ask%20some%20questions/functions/">Spatial Functions</a>. So, QGIS is simply a graphical user interface for accessing these command-line-based tools. The main geoalgorithms are provided by GDAL, GRASS, and QGIS. Navigating through the Menu Bar will display the general name of the tools. Accessing these tools through the Processing Toolbox will display each Provider and their functions.</p>
+<p>Geospatial Data Abstraction Library (GDAL) supports raster and vector formats, used for data translation and processing<sup id="fnref:1"><a class="footnote" href="#fn:1">1</a></sup>.<br><br>Geographic Resource Analysis Support System (GRASS) is a software suite for geospatial data management and analysis, image processing, graphics and maps production, spatial modeling, and visualization<sup id="fnref:2"><a class="footnote" href="#fn:2">2</a></sup>.<br><br>Both are Free and Open Source Software for Geospatial (FOSS4G)<sup id="fnref:3"><a class="footnote" href="#fn:3">3</a></sup>. 
 
 <img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-toolbox.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-toolbox.png"/>
 
+<hr>
 
+<div class="footnotes">
+References:
+<ol>
+<li id="fn:1"><a href="http://www.gdal.org/" target="_blank">http://www.gdal.org/</a><a href="#fnref:1" class="reversefootnote">↩</a></li>
+<li id="fn:2"><a href="http://grass.osgeo.org/" target="_blank">http://grass.osgeo.org/</a><a class="reversefootnote" href="#fnref:2">↩</a></li>
+<li id="fn:3"><a href="http://2015.foss4g.org/about/about-FOSS4G/" target="_blank">http://2015.foss4g.org/about/about-FOSS4G/</a><a class="reversefootnote" href="#fnref:3">↩</a></li>
+</ol>
+</div>
