--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -22,7 +22,7 @@ tags : [intro, raster, data types]
 
 #### Data: 
 
-iRods access: <br>&nbsp;&nbsp;&nbsp;``/Community Data/aegis/Spatial-bootcamp/basics/raster``
+iRods access: <br>&nbsp;&nbsp;&nbsp;``/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster``
 
 - [Landsat7 ETM 2015-05-10](link-here)
 
