--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -24,7 +24,7 @@ tags : [intro, raster, data types]
 
 iRods access: <br>&nbsp;&nbsp;&nbsp;``/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster``
 
-- [Landsat7 ETM 2015-05-10](link-here)
+- [Oregon state GTOPO30 DEM (gt30w140n90_oregon.tif](http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif)
 
 ----
 
@@ -95,18 +95,34 @@ Radiometric Resolution
 
 ## Exercise
 
+This exercise will introduce visualizing raster data in QGIS with common and simple procedures.
+
 <ol>
 <li>Import raster data <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>
 <ol>
-<li>Be sure you have already downloaded the <a href="#">raster data set</a>.</li>
-<li>Open QGIS if you do not already have it open and import the Landsat7 imagery with <strong>Add Raster Layer</strong>. Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-14.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-14.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
+<li>Be sure you have already downloaded the <a href="http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif">Oregon GTOPO30 DEM</a>.</li>
+<li>Open QGIS and <strong>Add Raster Layer</strong>. Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
 </li>
 </ol>
 </li>
-<li>Raster properties</li>
-<li>Metadata</li>
-<li>Raster stats</li>
-<li>Resolution - zoom in close enough to see pixels</li>
+<li>Raster histogram
+<ol>
+<li>
+Open the raster histogram: **Right-click layer (layer list) > Properties > Histogram**<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" alt="Spatial Data Bootcamp: QGIS - raster histogram"/>
+</li>
+</ol>
+</li>
+<li>Resolution
+<ol>
+<li>Zoom in close enough to see the actual pixels of the raster.<br><br>Do you see a difference between a raster and a vector?</li>
+</ol>
+</li>
+<li>Style
+<ol>
+<li>Open the raster properties > Style</li>
+<li>Change the style..</li>
+</ol>
+</li>
 </ol>
 
 ----
