--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -98,36 +98,36 @@ Radiometric Resolution
 This exercise will introduce visualizing raster data in QGIS with common and simple procedures.
 
 <ol>
-<li>Import raster data <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>
+<li>Import raster data
 <ol>
-<li>Be sure you have already downloaded the <a href="http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif">Oregon GTOPO30 DEM</a>.</li>
-<li>Open QGIS and <strong>Add Raster Layer</strong>. Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
+<li>Open QGIS and load the Oregon GTOPO30 DEM through iRods access: <br>&nbsp;&nbsp;&nbsp;<code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster</code><br><br>Or download here and <strong>Add Raster Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>: <a href="http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif">Oregon GTOPO30 DEM</a>.<br><br>Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
 </li>
 </ol>
 </li>
 <li>Raster histogram
 <ol>
-<li>
-Open the raster histogram: **Right-click layer (layer list) > Properties > Histogram**<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" alt="Spatial Data Bootcamp: QGIS - raster histogram"/>
+<li>Open the raster histogram: <em>Right-click layer (layer list) > Properties > Histogram</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" alt="Spatial Data Bootcamp: QGIS - raster histogram"/>
 </li>
 </ol>
 </li>
 <li>Resolution
 <ol>
-<li>Zoom in close enough to see the actual pixels of the raster.<br><br>Do you see a difference between a raster and a vector?</li>
+<li>Zoom in close enough to see the actual pixels of the raster.<br><br>Do you see a difference between a raster and a vector?<br><br>Remember, vector data are <em>points, or points connected by lines</em>, while raster data are <em>stored in cells or arrays</em>.<br><br>You can use the <strong>Identify Features</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-identify.png"/> tool to click on data visualized on the map canvas to view its attributes.<br><br><img src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-3.png" alt="Spatial Data Bootcamp: QGIS raster data"/></li>
 </ol>
 </li>
 <li>Style
 <ol>
-<li>Open the raster properties > Style</li>
-<li>Change the style..</li>
+<li>Open the raster <strong>Properties</strong>: <em>Right-click layer (layer list) > Proper > Style</em><br><br>Configure your settings as follow:<br><ul><li>Render type: Singleband pseudocolor</li><li>Load actual min/max values: <ul><li>Load min/max values: Min/Max</li><li>Accuracy: Actual (slower)</li><li>Click LOAD</li></ul></li><li>Generate new color map: (select color, invert if necessary)</li><li>Click CLASSIFY</li><li>Click APPLY and OK to save changed and return to the map</li></ul><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" alt="Spatial Data Bootcamp: QGIS - style raster"/><br><br>You should now be visualizing your DEM with color.<br><br>Keep in mind, the legend below (displayed below the layer name in the layer list) reads: values 1 to 827.74 = green, 827.75 to 1654.49 = light green, and so on. Highest points (cells) of elevation are viualized in red (below)<br><br>Changing the number of classifications, or increasing the number of range of values will visualize the raster differently.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster.5.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" alt="Spatial Data Bootcamp: QGIS - visualize raster"/></li>
 </ol>
 </li>
+<li>You've now been introduced to raster data in QGIS. No need to save this project or data. Move on to the next lesson</li>
 </ol>
 
-----
-
-[^1]: <a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg">By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg</a>
-[^2]: <a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif">By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons</a>
-[^3]: [Raster Graphics - Scratch Wiki](//:wiki.scratch.mit.edu/wiki/Raster_Graphics). wiki.scratch.mit.edu. Retrieved April 14 2015.
+<hr>
+<br><br>
+<ol>
+<li><a title="By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg">By Gringer (Own work) [CC0], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ARgb-raster-image.svg</a></li>
+<li><a title="By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AThe_use_of_a_raster_data_structure_to_summarize_a_point_pattern.gif">By Ldecola (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons</a></li>
+<li><a href="//:wiki.scratch.mit.edu/wiki/Raster_Graphics" target="_blank">Raster Graphics - Scratch Wiki (//:wiki.scratch.mit.edu/wiki/Raster_Graphics). wiki.scratch.mit.edu. Retrieved April 14 2015.</a></li>
+</ol>
 
