updated raster exercise

--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -117,7 +117,7 @@ This exercise will introduce visualizing raster data in QGIS with common and sim
 </li>
 <li>Style
 <ol>
-<li>Open the raster <strong>Properties</strong>: <em>Right-click layer (layer list) > Proper > Style</em><br><br>Configure your settings as follow:<br><ul><li>Render type: Singleband pseudocolor</li><li>Load actual min/max values: <ul><li>Load min/max values: Min/Max</li><li>Accuracy: Actual (slower)</li><li>Click LOAD</li></ul></li><li>Generate new color map: (select color, invert if necessary)</li><li>Click CLASSIFY</li><li>Click APPLY and OK to save changed and return to the map</li></ul><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" alt="Spatial Data Bootcamp: QGIS - style raster"/><br><br>You should now be visualizing your DEM with color.<br><br>Keep in mind, the legend below (displayed below the layer name in the layer list) reads: values 1 to 827.74 = green, 827.75 to 1654.49 = light green, and so on. Highest points (cells) of elevation are viualized in red.<br><br>Changing the number of classifications, or increasing the number of range of values will visualize the raster differently.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" alt="Spatial Data Bootcamp: QGIS - visualize raster"/></li>
+<li>Open the raster <strong>Properties</strong>: <em>Right-click layer (layer list) > Proper > Style</em><br><br>Configure your settings as follow, within the <strong>Band Rendering</strong> section:<br><ul><li>Render type: Singleband pseudocolor</li><li>Load actual min/max values: <ul><li>Load min/max values: Min/Max</li><li>Accuracy: Actual (slower)</li><li>Click LOAD</li></ul></li><li>Generate new color map: (select color, invert if necessary)</li><li>Click CLASSIFY</li><li>Click APPLY and OK to save changed and return to the map</li></ul><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" alt="Spatial Data Bootcamp: QGIS - style raster"/><br><br>You should now be visualizing your DEM with color.<br><br>Keep in mind, the legend below (displayed below the layer name in the layer list) reads: values 1 to 827.74 = green, 827.75 to 1654.49 = light green, and so on. Highest points (cells) of elevation are viualized in red.<br><br>Changing the number of classifications, or increasing the number of range of values will visualize the raster differently.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" alt="Spatial Data Bootcamp: QGIS - visualize raster"/></li>
 </ol>
 </li>
 <li>You've now been introduced to raster data in QGIS. No need to save this project or data. Move on to the next lesson</li>
