Updated vector exercise

--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -73,14 +73,38 @@ Polygon
 This next exercise will explain the basics of importing, inspecting, and styling vector data using QGIS.
 
 <ol>
-<li>Import vector data<img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/>
+<li>Open QGIS and import vector data. Choose one of the following:
+
 <ol>
- <li>If you have not already, go to the top of this page to the <a href="#data"><strong>Data</strong></a> section and download both vector and raster data sets.</li>
- <li>Open QGIS and import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> button in the Toolbar or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
- <li>Click <strong>Browse</strong> to locate the shapefile: arizona_counties.shp<br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
- <li>We now visualizing counties in Arizona. <strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
-  </ol>
+
+<li>iRods access:<br>&nbsp;&nbsp;&nbsp;<code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector</code>
+<br><br>
+<ol>
+<li>Click on the <strong>iRods</strong> tool icon and enter your <strong>iPlant username and password</strong>:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods.png" alt="Spatial Data Bootcamp: QGIS - iRods"/><br><br></li>
+<li>Navigate to <code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector</code></li> 
+<li>Within the <code>/vector/</code> directory, click (to highlight) <strong>arizona_counties.shp</strong>, then <strong>import</strong>.<br><br><img alt="Spatial Data Bootcamp: QGIS - import vector data through iRods"/></li>
+<br><br>
+</ol>
 </li>
+
+<li>Download zip:<br>&nbsp;&nbsp;&nbsp;<a href="http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip">arizona_counties.zip</a><br><br>
+<ol>
+<li> For non-iRods access, download, unpack ,and import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/> button in the Toolbar, or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
+<li> Click <strong>Browse</strong> to locate the shapefile: arizona_counties.shp<br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
+<li> We now visualizing counties in Arizona. <strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
+<li> two</li>
+</ol>
+
+</li>
+
+</ol>
+
+
+
+
+
+</li>
+
 <li>View vector properties
 <ol>
 <li>To view vector (and all layers) attributes, <em>Right-click layer > Open Attribute Table</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" alt="Spatial Data Bootcamp: QGIS - view vector data attributes"/><br><br>This data was extracted from Global Administrative Areas, which will be covered in <strong>Data Collection</strong>. This is simple boundary data; just gives us country, state, county name, and unique identifiers for each entry. Example uses of this type of data are: joining Census tabular data; visualizing boundaries; cutting satellite imagery to a desired area.</li>
