--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -53,10 +53,10 @@ Point
   : A Point is a 0-dimensional geometric object and represents a single location in coordinate space. A Point has an x-coordinate value, and a y-coordinate value. If called for by the associated Spatial Reference System, it may also have coordinate values for z and m.
 
 LineString 
-  : A linestring is a Curve with linear interpolation between Points. Each consecutive pair of points defines aLine Segment. A  line is a LineString with exactly 2 Points. A Linear Ring is a LineString is a LieString that is both closed and simple. A linestring is a series of connected points. These points act as vertices or nodes and are connected by curves. Each curve is assigned a start point and end point whcih represents the cardinality of the linestring. This cardinality is used to designate an order from the starting point to the end point.
+  : A linestring is a Curve with linear interpolation between Points. Each consecutive pair of points defines a Line Segment. A  line is a LineString with exactly 2 Points. A Linear Ring is a LineString is a LineString that is both closed and simple. A linestring is a series of connected points. These points act as vertices or nodes and are connected by curves. Each curve is assigned a start point and end point whcih represents the cardinality of the linestring. This cardinality is used to designate an order from the starting point to the end point.
 
 Polygon 
-  : A Polygon is a planar Surface defined by 1 exterior boundary and 0 or more interior boundaries. Each interior boundary defines a hole in the Polygon. Polygons are topologically closed. THe boundary of a Polygon consists of a set of LinearRings that make up its exterior and interior boundaries. No two Rings in the boundary cross and the Rings in the boundary of a Polygon may intersect but only as a tangent.  A series of connected line strings
+  : A Polygon is a planar Surface defined by 1 exterior boundary and 0 or more interior boundaries. Each interior boundary defines a hole in the Polygon. Polygons are topologically closed. The boundary of a Polygon consists of a set of LinearRings that make up its exterior and interior boundaries. No two Rings in the boundary cross and the Rings in the boundary of a Polygon may intersect but only as a tangent.  A series of connected LineStrings.
 
 ----
 
@@ -73,16 +73,16 @@ Polygon
 This next exercise will explain the basics of importing, inspecting, and styling vector data using QGIS.
 
 <ol>
-<li>Open QGIS and import vector data. Choose one of the following:
+<li>Open QGIS and import vector data. Choose one of the following (iRods or Download zip):
 
 <ol>
 
 <li>iRods access:<br>&nbsp;&nbsp;&nbsp;<code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector</code>
 <br><br>
 <ol>
-<li>Click on the <strong>iRods</strong> tool icon and enter your <strong>iPlant username and password</strong>:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods.png" alt="Spatial Data Bootcamp: QGIS - iRods"/><br><br></li>
+<li>iRods is accessed through the <strong>iRods</strong> tool icon, or <em>Menu Bar > Plugins > iRods</em>. If the iRods plugin does not display then you either don't have it installed, or it has been disabled.<br><br>Once opened, enter your <strong>iPlant username and password</strong>:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods-1.png" alt="Spatial Data Bootcamp: QGIS - iRods"/><br><br></li>
 <li>Navigate to <code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector</code></li> 
-<li>Within the <code>/vector/</code> directory, click (to highlight) <strong>arizona_counties.shp</strong>, then <strong>import</strong>.<br><br><img alt="Spatial Data Bootcamp: QGIS - import vector data through iRods"/></li>
+<li>Within the <code>/vector/</code> directory, click (to highlight) <strong>arizona_counties.shp</strong>, then <strong>import</strong>.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" alt="Spatial Data Bootcamp: QGIS - import vector data through iRods"/></li>
 <br><br>
 </ol>
 </li>
@@ -91,8 +91,8 @@ This next exercise will explain the basics of importing, inspecting, and styling
 <ol>
 <li> For non-iRods access, download, unpack ,and import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/> button in the Toolbar, or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
 <li> Click <strong>Browse</strong> to locate the shapefile: arizona_counties.shp<br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
-<li> We now visualizing counties in Arizona. <strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
-<li> two</li>
+<li> We are now visualizing counties in Arizona.<br><br>
+<strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
 </ol>
 
 </li>
@@ -107,7 +107,7 @@ This next exercise will explain the basics of importing, inspecting, and styling
 
 <li>View vector properties
 <ol>
-<li>To view vector (and all layers) attributes, <em>Right-click layer > Open Attribute Table</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" alt="Spatial Data Bootcamp: QGIS - view vector data attributes"/><br><br>This data was extracted from Global Administrative Areas, which will be covered in <strong>Data Collection</strong>. This is simple boundary data; just gives us country, state, county name, and unique identifiers for each entry. Example uses of this type of data are: joining Census tabular data; visualizing boundaries; cutting satellite imagery to a desired area.</li>
+<li>To view vector (and all layers) attributes, <em>Right-click layer > Open Attribute Table</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-3.png" alt="Spatial Data Bootcamp: QGIS - view vector data attributes"/><br><br>This data was extracted from Global Administrative Areas, which will be covered in <strong>Data Collection</strong>. This is simple boundary data; just gives us country, state, county name, and unique identifiers for each entry. Example uses of this type of data are: joining Census tabular data; visualizing boundaries; cutting satellite imagery to a desired area.<br><br></li>
 </ol>
 </li>
 <li>Styling</li>
@@ -120,7 +120,7 @@ You can change the symbolism of the data by clicking on the dropdown list (defau
 <li>
 Once in the <em>Categorized</em> menu, configure as follows:<br><ul><li>Column: NAME_2</li><li>Color ramp: Random colors</li><li>Click <strong>Classify</strong> to add the data classifications from the column <strong>NAME_2</strong>.</li></ul><br>If you remember from looking at our Arizona counties attributes, you'll know that <strong>NAME_2</strong> represents the county name of each county.<br><br>Click <strong>Apply</strong> then <strong>OK</strong> to update changes.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" alt="Spatial Data Bootcamp: QGIS - Arizona county categorized by county name"/><br><br>
 </li>
-<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. Move on to the next lesson.
+<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. 
 </li>
 </ol>
 </ol>
