--- a/_posts/2000-12-31-overview.md
+++ b/_posts/2000-12-31-overview.md
@@ -39,7 +39,9 @@ There are two main families of spatial data which are each used for a specific f
 
 ----
 
-## QGIS brief overview
+## Exercise:
+
+### QGIS brief overview
 
 For purposes of flow, QGIS is introduced below.
 
